# fractals

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  fractal-box-counter.code-workspace  generate_boxcount_demo_images.py  pyproject.toml  requirements.txt  ui.py
.github/workflows/: python-ci.yml
boxcounting/: __init__.py  box_counter_compare_dialog.py  box_counter_helpers.py  box_counter_utils.py  roi_image_label.py
design/: design.puml  flow.puml
fractals/: __init__.py  barnsley_fern.py  burning_ship.py  julia.py  mandelbrot.py  newton.py  sierpinski_triangle.py
images/OAS1_0029_MR1/: OAS1_0029_MR1.txt
images/OAS1_0031_MR1/: OAS1_0031_MR1.txt
scripts/: finder.py
tests/: test_barnsley_fern.py  test_box_counter_utils.py  test_burning_ship.py  test_julia.py  test_mandelbrot.py  test_newton.py  test_sierpinski_triangle.py
wiki/: Box-Counting-Comparison-Stepwise.md  Box-Counting-Method.md  Fractal-Types-and-Equations.md  Fractals-in-Medical-Imaging.md  Home.md
